# python-directory

./: .gitignore  CONTRIBUTING.md  Depfile  buf.gen.yaml  go.mod  init_gen.py  makefile  pyproject.toml
.github/: CODEOWNERS.md
.github/workflows/: ci.yaml
buf/: buf.gen.yaml
magefiles/: go.mod  go.sum  magefile.go
src/aserto/directory/assertion/v3/: assertion_pb2.py
src/aserto/directory/common/v2/: common_pb2.py
src/aserto/directory/common/v3/: __init__.py  common_pb2.py  common_pb2.pyi
src/aserto/directory/exporter/v2/: __init__.py  exporter_pb2.py  exporter_pb2.pyi
src/aserto/directory/exporter/v3/: exporter_pb2.py  exporter_pb2.pyi
src/aserto/directory/importer/v2/: __init__.py  importer_pb2.py  importer_pb2_grpc.py  importer_pb2_grpc.pyi
src/aserto/directory/importer/v3/: __init__.py  importer_pb2.py  importer_pb2.pyi
src/aserto/directory/model/v3/: model_pb2.py  model_pb2.pyi
src/aserto/directory/openapi/v3/: openapi_pb2.py
src/aserto/directory/reader/v2/: __init__.py  reader_pb2.py  reader_pb2.pyi  reader_pb2_grpc.py  reader_pb2_grpc.pyi
src/aserto/directory/reader/v3/: __init__.py  reader_pb2.py  reader_pb2.pyi  reader_pb2_grpc.py  reader_pb2_grpc.pyi
src/aserto/directory/schema/v2/: __init__.py  group_pb2.py  identity_pb2.py  tenant_pb2.py  user_pb2.py  user_pb2.pyi
src/aserto/directory/schema/v3/: __init__.py  group_pb2.py  group_pb2.pyi  identity_pb2.py  identity_pb2.pyi  tenant_pb2.py  tenant_pb2.pyi  user_pb2.py  user_pb2.pyi
src/aserto/directory/writer/v2/: __init__.py  writer_pb2.py  writer_pb2.pyi  writer_pb2_grpc.py  writer_pb2_grpc.pyi
src/aserto/directory/writer/v3/: writer_pb2.py  writer_pb2.pyi
src/buf/validate/: expression_pb2.py  validate_pb2.py
src/buf/validate/priv/: private_pb2.py
src/google/api/: field_behavior_pb2.py
src/protoc_gen_openapiv2/options/: annotations_pb2.py  openapiv2_pb2.py  openapiv2_pb2.pyi
